git-svn-id: http://scorekeeper.googlecode.com/svn/trunk@17 f5341608-8839-0410-823a-0bb850aa70eb

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -31,3 +31,5 @@
       
     #footer
       Copyright 2007 by Lars Sehested
+      = '&middot;'
+      = link_to 'Project home', 'http://code.google.com/p/scorekeeper/', :target => '_blank'
