--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -71,6 +71,7 @@ h2#page_title
   :padding 10px
   :background-color #EEEEEE
   :border-top 1px solid #000000
+  :text-align center
   
 .clear
   :clear both
