git-svn-id: http://scorekeeper.googlecode.com/svn/trunk@19 f5341608-8839-0410-823a-0bb850aa70eb

--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -56,7 +56,8 @@ h2#page_title {
 #footer {
   padding: 10px;
   background-color: #EEEEEE;
-  border-top: 1px solid #000000; }
+  border-top: 1px solid #000000;
+  text-align: center; }
 
 .clear {
   clear: both; }
