--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -33,4 +33,5 @@
       Copyright 2007 by Lars Sehested
       = '&middot;'
       = link_to 'Project home'[], 'http://code.google.com/p/scorekeeper/', :target => '_blank'
+      = '&middot;'
       = link_to 'Report issue'[], 'http://code.google.com/p/scorekeeper/issues/entry', :target => '_blank'
