git-svn-id: http://scorekeeper.googlecode.com/svn/trunk@23 f5341608-8839-0410-823a-0bb850aa70eb

--- a/app/views/games/index.haml
+++ b/app/views/games/index.haml
@@ -1,19 +1,21 @@
 - title 'Games'[]
 
+%h3= 'Last 10 games'[]
+
 - if @games.length > 0
   %table.list
     %tr
       %th= 'Played at'[]
       %th= 'Team one'[]
-      %th= 'Team two'[]
       %th= 'Score'[]
+      %th= 'Team two'[]
       %th= '&nbsp;'
-    - @games.each do |game|
+    - @games.reverse.each do |game|
       %tr.game{:class => cycle('odd', 'even')}
         %td= game.played_at
         %td= game.teams.first.memberships.collect { |m| m.person.display_name }.join(' - ')
-        %td= game.teams.last.memberships.collect { |m| m.person.display_name }.join(' - ')
         %td= game.teams.collect(&:score).join(' - ')
+        %td= game.teams.last.memberships.collect { |m| m.person.display_name }.join(' - ')
         %td= link_to 'Remove'[], game_path(game), :method => :delete, :confirm => 'Are you sure?'[]
 
 - form_for @game do |f|
