--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -5,6 +5,14 @@
     :margin 0
     :padding 10px
     
+    a
+      :text-decoration none
+      :color #000000
+    
+  #languages
+    :float right
+    :padding 10px
+    
   ul#menu
     :margin 0
     :border-bottom 1px solid #000000
