--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -13,7 +13,12 @@
 
   %body
     #header
-      %h1= 'Table Soccer'[]
+      #languages
+        = 'Language'[] + ':'
+        = link_to 'English', :language => 'en'
+        = link_to 'Dansk', :language => 'da'
+    
+      %h1= link_to 'Table Soccer'[], home_url
       
       %ul#menu
         %li{:class => controller.controller_name == 'dashboard' ? 'current' : ''}= link_to 'Dashboard'[], dashboard_path
