--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -3,6 +3,12 @@
   #header h1 {
     margin: 0;
     padding: 10px; }
+    #header h1 a {
+      text-decoration: none;
+      color: #000000; }
+  #header #languages {
+    float: right;
+    padding: 10px; }
   #header ul#menu {
     margin: 0;
     border-bottom: 1px solid #000000;
