git-svn-id: http://scorekeeper.googlecode.com/svn/trunk@25 f5341608-8839-0410-823a-0bb850aa70eb

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -15,8 +15,8 @@
     #header
       #languages
         = 'Language'[] + ':'
-        = link_to 'English', :language => 'en'
-        = link_to 'Dansk', :language => 'da'
+        = link_to_unless(language == 'en', 'English', :language => 'en')
+        = link_to_unless(language == 'da', 'Dansk', :language => 'da')
     
       %h1= link_to 'Table Soccer'[], home_url
       
