--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -75,6 +75,13 @@ h2#page_title
       td
         :background-color #EEEEEE
 
+  table#games
+    td.team_one, th.team_one
+      :text-align right
+      
+    td.score, th.score
+      :text-align center
+
 #footer
   :padding 10px
   :background-color #EEEEEE
