git-svn-id: http://scorekeeper.googlecode.com/svn/trunk@28 f5341608-8839-0410-823a-0bb850aa70eb

--- a/app/views/games/index.haml
+++ b/app/views/games/index.haml
@@ -10,7 +10,7 @@
       %th.score= 'Score'[]
       %th.team_two= 'Team two'[]
       %th= '&nbsp;'
-    - @games.reverse.each do |game|
+    - @games.each do |game|
       %tr.game{:class => cycle('odd', 'even')}
         %td= game.played_at
         %td.team_one= game.teams.first.memberships.collect { |m| m.person.display_name }.join(' - ')
