git-svn-id: http://scorekeeper.googlecode.com/svn/trunk@30 f5341608-8839-0410-823a-0bb850aa70eb

--- a/app/views/dashboard/index.haml
+++ b/app/views/dashboard/index.haml
@@ -20,4 +20,4 @@
       %td= person.goals_for
       %td= person.goals_against
       %td= person.goals_for - person.goals_against
-      %td= (10 * (person.goals_for - person.goals_against) / person.memberships_count) / 10.0
+      %td= (10 * (person.goals_for - person.goals_against) / person.memberships_count) / 10.0 if person.memberships_count > 0
