--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -33,7 +33,10 @@
      
     #content
       = yield
-      
+
+      .clear
+        %hr
+
     #footer
       Copyright 2007 by Lars Sehested
       = '&middot;'
