Now with mugshots
git-svn-id: http://scorekeeper.googlecode.com/svn/trunk@35 f5341608-8839-0410-823a-0bb850aa70eb

--- a/app/views/people/_form.haml
+++ b/app/views/people/_form.haml
@@ -9,3 +9,9 @@
 %label
   = 'Display name'[]
   = f.text_field :display_name
+
+- fields_for :mugshot do |fi|
+  %label
+    = 'Picture'[]
+    = fi.file_field :uploaded_data
+  
