--- a/app/views/people/edit.haml
+++ b/app/views/people/edit.haml
@@ -1,5 +1,5 @@
 - title 'Editing person'[]
 
-- form_for @person do |f|
+- form_for @person, :html => { :multipart => true } do |f|
   = render :partial => 'form', :locals => { :f => f }
   = submit_tag 'Save'[]
