--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -14,10 +14,17 @@ table
     a
       :text-decoration none
       :color #000000
-    
-  #languages
+   
+  #links
     :float right
     :padding 20px
+
+    #user
+      :display inline
+      :padding-right 10px 
+    
+    #languages
+      :display inline
     
   ul#menu
     :margin 0
