git-svn-id: http://scorekeeper.googlecode.com/svn/trunk@39 f5341608-8839-0410-823a-0bb850aa70eb

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -38,6 +38,11 @@
       %h2#page_title= @page_title
      
     #content
+      - if flash.keys.length > 0
+        #messages
+          - flash.keys.each do |key|
+            %div{ :class => 'key' }= flash[key]
+    
       = yield
 
       .clear
