--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -63,6 +63,12 @@ h2#page_title
 
 #content
   :padding 20px
+  
+  #messages
+    :border 1px solid #999999
+    :background-color #EEEEEE
+    :padding 10px
+    :margin-bottom 10px
 
   label
     :display block
