--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -69,6 +69,10 @@ h2#page_title
     :background-color #EEEEEE
     :padding 10px
     :margin-bottom 10px
+    
+  #game_count
+    :padding-top 20px
+    :padding-left 2px
 
   label
     :display block
