--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -132,12 +132,18 @@ h2#page_title
         :font-size 11px
         :padding-top 7px
 
-      .played_at
+      .meta
         :width 250px
         :text-align center
         :font-size 11px
         :color #999999
         :padding-bottom 5px
+
+        .played_at
+          :display inline
+          
+        .creator
+          :display inline
       
 #footer
   :padding 10px
