--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -18,6 +18,9 @@
           #user
             = current_user.login
             = link_to 'Logout', logout_path
+        - else
+          #user
+            = link_to 'Login', login_path
           
         #languages
           = 'Language'[] + ':'
