--- a/app/views/people/index.haml
+++ b/app/views/people/index.haml
@@ -9,12 +9,13 @@
   - @people.each do |person|
     %tr[person]
       %td= image_tag person.mugshot.public_filename(:thumb), :alt => person.full_name if person.mugshot
-      %td= link_to person.full_name, edit_person_path(person)
+      %td= link_to_if admin?, person.full_name, edit_person_path(person)
       %td= person.display_name
-      %td= link_to 'Remove'[], person_path(person), :method => :delete
+      %td= link_to 'Remove'[], person_path(person), :method => :delete if admin?
 
-- form_for @person, :html => { :multipart => true } do |f|
-  %h3= 'Add person'[]
+- if admin?
+  - form_for @person, :html => { :multipart => true } do |f|
+    %h3= 'Add person'[]
 
-  = render :partial => 'form', :locals => { :f => f }
-  = submit_tag 'Save'[]
+    = render :partial => 'form', :locals => { :f => f }
+    = submit_tag 'Save'[]
