--- a/app/views/games/index.haml
+++ b/app/views/games/index.haml
@@ -13,7 +13,8 @@
           %hr
         .meta
           .played_at= game.played_at.to_s :short
-          .creator= 'by {user}'[:by_user, game.creator.login] if game.creator
+          .creator= ' by {user}'[:by_user, game.creator.login] if game.creator
+          .delete= link_to 'Delete', game_path(game), :method => :delete, :confirm => 'Delete game. Are you sure?'[]
         
 - if logged_in?
   - form_for @game do |f|
