git-svn-id: http://scorekeeper.googlecode.com/svn/trunk@71 f5341608-8839-0410-823a-0bb850aa70eb

--- a/app/views/teams/index.haml
+++ b/app/views/teams/index.haml
@@ -1,9 +1,13 @@
 %table.list
   %tr
     %th= 'Members'[]
-    %th= 'Games'[]
+    %th= 'Games played'[]
+    %th= 'Games won'[]
+    %th= 'Percentage'[]
 
   - @teams.each do |team|
     %tr
-      %td= Person.find(:all, :conditions => { :id => team[0].split(',') }).collect(&:full_name).join(' - ')
-      %td= team[1]
+      %td= team[:players].collect(&:full_name).join(' - ')
+      %td= team[:games_played]
+      %td= team[:games_won]
+      %td= team[:percentage]
