--- a/app/views/teams/index.haml
+++ b/app/views/teams/index.haml
@@ -10,4 +10,4 @@
       %td= team[:players].collect(&:full_name).join(' - ')
       %td= team[:games_played]
       %td= team[:games_won]
-      %td= team[:percentage]
+      %td= team[:percentage].to_s + '%'
