--- a/app/views/teams/index.haml
+++ b/app/views/teams/index.haml
@@ -1,6 +1,7 @@
 %table.list
   %tr
     %th= 'Members'[]
+    %th= 'Total ranking'[]
     %th= 'Games played'[]
     %th= 'Games won'[]
     %th= 'Percentage'[]
@@ -8,6 +9,7 @@
   - @teams.each do |team|
     %tr
       %td= team[:players].collect(&:full_name).join(' - ')
+      %td= team[:players].sum(&:ranking)
       %td= team[:games_played]
       %td= team[:games_won]
       %td= team[:percentage].to_s + '%'
