git-svn-id: http://scorekeeper.googlecode.com/svn/trunk@74 f5341608-8839-0410-823a-0bb850aa70eb

--- a/app/views/teams/index.haml
+++ b/app/views/teams/index.haml
@@ -9,7 +9,7 @@
   - @teams.each do |team|
     %tr
       %td= team[:players].collect(&:full_name).join(' - ')
-      %td= team[:players].sum(&:ranking)
+      %td= team[:total_ranking]
       %td= team[:games_played]
       %td= team[:games_won]
       %td= team[:percentage].to_s + '%'
