OpenID being committed...
git-svn-id: http://scorekeeper.googlecode.com/svn/trunk@76 f5341608-8839-0410-823a-0bb850aa70eb

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -16,7 +16,7 @@
       #links
         - if logged_in?
           #user
-            = current_user.login
+            = link_to current_user.login, edit_user_path(current_user)
             = link_to 'Logout', logout_path
         - else
           #user
