--- a/app/views/users/edit.haml
+++ b/app/views/users/edit.haml
@@ -4,4 +4,6 @@
   = render :partial => 'form', :locals => { :f => f }
     
   %p
-    = submit_tag 'Save changes'[]
+    = submit_tag 'Save'[], :disable_with => 'Saving'[] + '&hellip;'
+    = link_to 'Logout', logout_url
+    = link_to 'Destroy account', user_path(@user), :method => :delete
