--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -153,6 +153,10 @@ h2#page_title
   :text-align center
   :clear both
   
+input#openid_url
+  :background white url(/images/openid.gif) no-repeat scroll 0pt 50%
+  :padding-left 18px
+  
 .clear
   :clear both
   
