--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -124,6 +124,10 @@ h2#page_title {
   text-align: center;
   clear: both; }
 
+input#openid_url {
+  background: white url(/images/openid.gif) no-repeat scroll 0pt 50%;
+  padding-left: 18px; }
+
 .clear {
   clear: both; }
   .clear hr {
