git-svn-id: http://scorekeeper.googlecode.com/svn/trunk@78 f5341608-8839-0410-823a-0bb850aa70eb

--- a/app/views/users/_form.haml
+++ b/app/views/users/_form.haml
@@ -34,7 +34,7 @@
     = 'Administrator'[]
     = f.check_box :is_admin
     
-- if @user.nil? || @user.identity_url.blank?
+- if @user_openids.nil? && (@user.nil? || @user.identity_url.blank?)
   %p
     ='...' + 'or use'[] + ':'
 
