git-svn-id: http://scorekeeper.googlecode.com/svn/trunk@81 f5341608-8839-0410-823a-0bb850aa70eb

--- a/app/views/users/_form.haml
+++ b/app/views/users/_form.haml
@@ -34,18 +34,17 @@
     = 'Administrator'[]
     = f.check_box :is_admin
 
-- if @user_openids.nil?
-  - @user.nil? || @user.identity_url.blank?
-    %p
-      ='...' + 'or use'[] + ':'
+- if @user_openids.nil? && (@user.nil? || @user.identity_url.blank?)
+  %p
+    ='...' + 'or use'[] + ':'
 
-    %p
-      %label
-        = 'OpenID'[] + ':'
-        = text_field_tag 'openid_url'
-
-  - else
+  %p
     %label
-      = 'OpenID'[]
-      %br
-      = f.text_field :identity_url, :readonly => true
+      = 'OpenID'[] + ':'
+      = text_field_tag 'openid_url'
+
+- else
+  %label
+    = 'OpenID'[]
+    %br
+    = f.text_field :identity_url, :readonly => true
