git-svn-id: http://scorekeeper.googlecode.com/svn/trunk@82 f5341608-8839-0410-823a-0bb850aa70eb

--- a/app/views/users/_form.haml
+++ b/app/views/users/_form.haml
@@ -43,7 +43,7 @@
       = 'OpenID'[] + ':'
       = text_field_tag 'openid_url'
 
-- else
+- elsif @user_openids.nil?
   %label
     = 'OpenID'[]
     %br
