git-svn-id: http://scorekeeper.googlecode.com/svn/trunk@85 f5341608-8839-0410-823a-0bb850aa70eb

--- a/app/views/teams/index.haml
+++ b/app/views/teams/index.haml
@@ -4,7 +4,7 @@
     %th= 'Total ranking'[]
     %th= 'Games played'[]
     %th= 'Games won'[]
-    %th= 'Percentage'[]
+    %th= 'Winning percentage'[]
 
   - @teams.each do |team|
     %tr
