--- a/app/views/users/edit.haml
+++ b/app/views/users/edit.haml
@@ -5,5 +5,5 @@
     
   %p
     = submit_tag 'Save'[], :disable_with => 'Saving'[] + '&hellip;'
-    = link_to 'Logout', logout_url
-    = link_to 'Destroy account', user_path(@user), :method => :delete
+    = link_to 'Logout'[], logout_url
+    = link_to 'Destroy account'[], user_path(@user), :method => :delete
