--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -70,6 +70,18 @@ h2#page_title
     :padding 10px
     :margin-bottom 10px
     
+    #notice
+    :background-color #CFC
+    :border solid 1px #6C6
+
+    #warning
+    :background-color #DD9A24
+    :border solid 1px #DD9A24
+
+    #error
+    :background-color #FCC
+    :border solid 1px #C66
+
   #game_count
     :padding-top 20px
     :padding-left 2px
